Arranged serializion and xml binding.